--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ dependencies:
   flutter_local_notifications: ^1.4.4+1
   graphql_flutter: ^3.0.1
   auto_size_text: ^2.1.0
+  modal_bottom_sheet: ^0.2.0+1
   
 
 dev_dependencies:
@@ -81,6 +82,12 @@ dev_dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  flutter_launcher_icons: ^0.7.3
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "images/icons/icon3.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
