--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
     <application tools:replace="android:label" android:name="io.flutter.app.FlutterApplication" 
-    android:label="movie" android:icon="@mipmap/ic_launcher">
+    android:label="TMovie" android:icon="@mipmap/ic_launcher">
     <meta-data android:name="com.google.android.gms.ads.APPLICATION_ID"
              android:value="ca-app-pub-8117211796129035~2073774357"/>
         <activity android:name=".MainActivity" 
